# Django-Personal-Assistant

./: README.md  pyproject.toml
DPA/: .env  .env.exem  .gitignore  credentials.json  db.sqlite3  docker-compose.yml  docker_run.txt  helpers.py  keys.yaml  logs  manage.py  requirements.txt  settings.yaml
DPA/DPA/: asgi.py  settings.py  urls.py  wsgi.py
DPA/contacts/: forms.py  models.py  urls.py  views.py
DPA/contacts/migrations/: 0001_initial.py  0002_alter_contact_birthday_alter_contact_email_and_more.py  0003_alter_contact_phone.py
DPA/files/: forms.py  get_access_token.py  models.py  tests.py  urls.py  views.py
DPA/files/async_google_drive/: client_secrets.json  example.py  get_authorization_url.py  helpers.py  keys.yaml  oauth2.py  update_access_token.py  user_creds.json
DPA/files/google_drive_connect/: credentials.json  examples_get_and_post_requests_in_google_drive.py  gauth.py
DPA/files/migrations/: 0001_initial.py  0002_alter_uploadedfile_file.py  0003_userfoldergoogledrive.py  0004_rename_user_id_userfoldergoogledrive_user.py  0005_rename_folder_id_userfoldergoogledrive_folder_drive_id.py  0006_alter_userfoldergoogledrive_folder_drive_id_and_more.py  0007_alter_userfoldergoogledrive_folder_drive_id.py  0008_alter_userfoldergoogledrive_user.py
DPA/notes/: apps.py  forms.py  models.py  urls.py  views.py
DPA/notes/migrations/: 0001_initial.py  0002_alter_note_note.py  0002_alter_note_tags_alter_notetotag_note_and_more.py
DPA/postgres-data/: postmaster.pid
DPA/users/: bbc_news_scraper.py  forms.py  models.py  urls.py  views.py
(+186 files in other folders)
