[tool.poetry]
name = "assistant"
version = "0.1.0"
description = ""
authors = ["Group_6"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.0.4"
django-environ = "^0.11.2"
pydrive = "^1.3.1"
psycopg2 = "^2.9.9"
aiogoogle = "^5.7.0"
django-background-tasks = "^1.2.5"
django4-background-tasks = "^1.2.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
